完成镜像同步和镜像的增删改查接口